fix: autocomplete, text wrap

--- a/src/components/customerCard/customerCard.module.scss
+++ b/src/components/customerCard/customerCard.module.scss
@@ -94,6 +94,7 @@
     &__email {
         font-size: 12px;
         color: $grey-primary;
+        word-wrap: break-word;
 
         @media screen and (min-width: 1024px) {
             font-size: 14px;
